# madr-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
madr_mcp_server/app/: routes.py
tests/: test_health.py
